--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	font-weight:300;
 	padding: 20px;
-	max-width: 1000px;
+	max-width: 960px;
 	margin: 0 auto;
 	font-size: 15px;
 }
@@ -30,8 +30,7 @@ h2{
 }
 
 h3{
-	font-size: 16px;
-	
+	font-size: 16px;	
 	border-bottom: 1px dashed #cccccc;
 
 }
@@ -61,13 +60,24 @@ header p{
 	margin: 0;
 }
 
-a:link{
-	color: #cccccc;
+a:link, a:visited{
+	color: #999999;
+	font-weight: bolder;
+	text-decoration: none;
 }
 
 a:hover{
 	color: red;
 }
+
+.summary ul{
+		padding-left: 0;
+	}
+
+	.summary ul li{
+		display: block;
+		padding-left: 20px;
+	}
 
 .location{
 	float: left;
@@ -103,4 +113,19 @@ a:hover{
 footer{
 	text-align: center;
 	margin-top: 100px;
+}
+
+@media (min-width: 480px){
+
+	.portrait{
+		width: 50%;
+		float: right;
+		margin-left: 10px;
+	}
+
+	.summary ul li{
+		display: inline-block;
+		width: 45%;
+		padding-left: 10px;
+	}
 }
